IntelliJ warning/errors